@@ -1,3 +1,10 @@
+Wed Apr 11 15:07:53 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.cpp:
+        * dds/DCPS/Service_Participant.cpp:
+
+          Corrected method names in log messages.
+
 Tue Apr 10 19:51:19 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
 
         * tools/scripts/lcov.pl:
